--- a/src/components/UxUiProjects/index.scss
+++ b/src/components/UxUiProjects/index.scss
@@ -141,33 +141,30 @@
   transform: scale(0);
   transition: all .2s ease-in-out;
 }
+}
 
 // Responsive tablet
 /*=====================================*/
 
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 563px) and (max-width: 1000px) {
 
   .uxUiProjects__module {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(24, 1fr);
-    height: 340vh;
+    display: block;
     &__square {
 
       &__uxUiProjects {
-        grid-row: span 4;
-      grid-column: 1;
-      height: 100%;
+        height: 70%;
       }
 
       &__items {
         grid-row: 5/span 4;
       grid-column: 1;
-      height: 100%;
       }
 
   }
 }
 }
+
 
 /* Responsive smartphone */
 /*=====================================*/
@@ -175,12 +172,20 @@
 @media screen and (max-width: 562px) {
 
   .uxUiProjects {
-    margin-right: vars.$bigGutter;
-    margin-left: vars.$bigGutter;
+    margin-right: vars.$smallGutter;
+    margin-left: vars.$smallGutter;
+    &__module {
+      display: block;
+      &__square {
+        &__uxUiProjects {
+          height: 50%;
+        }
+      }
+    }
   }
 
   .bigTitle {
     font-size: (vars.$bigGutter)*4;
   }
 }
-}
+
